2005-09-12  Carol Spears <carol@gimp.org>
	* examples/image_tile: undeprecated
	* examples/frame_reshuffle: undeprecated
	* examples/dust: undeprecated
	* examples/blowinout: undeprecated
	* examples/redeye: moved back to Filters menu for gimp-2.2
	* examples/map_to_gradient: moved back to Filters menu for gimp-2.2

2005-09-08  Seth Burgess <sjburges@gimp.org>
	* examples/mirrorsplit: undeprecated
	* examples/blended2
	* examples/innerbevel: check gimp version and use apporpriate API for 
	  set_preserve_trans/set_lock_alpha

2005-09-07  Carol Spears <carol@gimp.org>
	* examples/scratches: undeprecated
	* examples/repdup: undeprecated
	* examples/redeye: undeprecated, tried to match the new menu layout
	* examples/map_to_gradient: undeprecated, tried to match the new menu layout

2005-09-07  Carol Spears <carol@gimp.org>
	* examples/goldenmean
	* examples/stamps
	* examples/xachvision: undeprecated, added Context

2005-09-07  Seth Burgess <sjburges@gimp.org>
	* examples/blended2
	* examples/bricks
	* examples/dots
	* examples/dust
	* examples/innerbevel
	* examples/prep4gif
	* examples/randomart1
	* examples/selective_sharpen
	* examples/randomblends
	* examples/translogo
	* examples/windify
	* examples/xachlego
	* examples/xachshadow
	* examples/yinyang: undeprecated, added Context

	* Gimp.pm: changed Brushes pseudo-class to default to use gimp_brush_
	  instead of deprecated gimp_brushes_

2005-09-06  Seth Burgess <sjburges@gimp.org>
	* examples/fade-alpha 
	* examples/dots: removed deprecated stuff, used Context        

2005-09-06  Seth Burgess <sjburges@gimp.org>
	* Makefile.PL: require ExtUtils::Depends too. 

2005-09-06  Seth Burgess <sjburges@gimp.org>
	* Makefile.PL: require ExtUtils::PkgConfig in order to avoid it failing 
	  in config.pl silently.  

2005-09-06  Seth Burgess <sjburges@gimp.org>
	* Gimp.pm: add a Context pseudoclass.  Change first match for Layer 
	  pseudoclass to be gimp_drawable_ instead of gimp_layer_, because 