@@ -24,11 +24,13 @@ Gimp::on_net {
   new Gimp::Display($img);
 
 # do a bunch of operations just as a spped test, flushing in between
+  Context->push();
   for $i (0..255) {
-     Palette->set_background([$i,255-$i,$i]);
+     Context->set_background([$i,255-$i,$i]);
      $bg->edit_fill(BACKGROUND_FILL);
      Display->displays_flush();
   }
+  Context->pop();
 #  Gimp::Net::server_quit;  # kill the gimp-perl-server-extension (ugly name)
 };
 
