@@ -1,3 +1,12 @@
+2005-09-13  Seth Burgess <sjburges@gimp.org>
+	* UI/UI.pm: changed the lookup functions from Gimp->get_* to
+	  Context->get_* to avoid warnings on dialog startup.
+	* examples/example-fu
+	* examples/example-net
+	* examples/glowing_steel
+	* examples/repdup: undeprecated
+	* TODO: updated with current broken stuff, release blockers.
+
 2005-09-12  Carol Spears <carol@gimp.org>
 	* examples/image_tile: undeprecated
 	* examples/frame_reshuffle: undeprecated
